--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/normalize.css" />
-        <!--	<link rel="stylesheet" href="css/zengrid.css" />-->
-        <link rel="stylesheet" href="css/zengrill.css">
+        	<link rel="stylesheet" href="css/zengrid.css" />
 
 		<style>
 		* {font-family: Helvetica, Arial;}
