--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	</head>
 	<body>
 
+		<h1> Zen Grid </h1>
+
 	<div class="container">
 
 		<div class="row">
@@ -44,14 +46,14 @@
 			<div class="w11">11</div>
 			<div class="w5">5</div>
 
-			<div class="w10">10</div>
-			<div class="w6">6</div>
+			<div class="w10 offset1 ">10 offset 1</div>
+			<div class="w5">5</div>
 
-			<div class="w9">9</div>
+			<div class="w9 push1">9 pushed</div>
 			<div class="w7">7</div>
 
 			<div class="w8">8</div>
-			<div class="w8">8</div>
+			<div class="w8 pull1">8 pulled</div>
 
 			<div class="w7">7</div>
 			<div class="w9">9</div>
